@@ -13,5 +13,7 @@ const Channel_Step_t Cyclogram_Cold[]=
 {
 		{.Channel = CH_STARTER,.Mode = OUT_MODE_ON,.ms = 0, .On = 0,.Off = 0},
 		{.Channel = CH_STARTER,.Mode = OUT_MODE_OFF, .ms = 1000, .On = 0, .Off = 0},
-		{.Channel = CH_TOTAL}
+		{.Channel = CH_PRIMING_FUEL, .Mode = OUT_MODE_PULSED, .ms = 2000, .On = 500, .Off = 100},
+		{.Channel = CH_PRIMING_FUEL, .Mode = OUT_MODE_OFF, .ms = 9000, .On = 0, .Off = 0},
+		{.Channel = CH_TOTAL, .ms = 10000}
 };
